--- a/papers.bib
+++ b/papers.bib
@@ -6,3 +6,23 @@
   year = {2015},
   month = {May}
 }
+
+@article{DBLP:journals/corr/JainTFDPLGC17,
+  author    = {Paras Jain and
+               Chirag Tailor and
+               Sam Ford and
+               Liexiao Ding and
+               Michael Phillips and
+               Fang Cherry Liu and
+               Nagi Gebraeel and
+               Duen Horng Chau},
+  title     = {Scalable Architecture for Anomaly Detection and Visualization in Power
+               Generating Assets},
+  journal   = {CoRR},
+  volume    = {abs/1701.07500},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1701.07500},
+  timestamp = {Sat, 11 Feb 2017 00:00:00 +0100},
+  biburl    = {http://dblp.dagstuhl.de/rec/bib/journals/corr/JainTFDPLGC17},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
